--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "hubot-mailchimp",
-  "description": "Mailchimp hubot script as an NPM package",
-  "version": "1.2.0",
+  "name": "hubot-intercom.io",
+  "description": "Intercom.io hubot script as an NPM package",
+  "version": "1.0.0",
   "author": {
-    "name": "Mathieu BAUMGARTNER",
-    "email": "https://github.com/m-baumgartner"
+    "name": "Iñaki Abete",
+    "email": "https://github.com/inakiabt"
   },
   "license": "MIT",
   "keywords": [
     "hubot",
     "hubot-scripts",
-    "mailchimp"
+    "intercom.io"
   ],
   "repository": {
     "type": "git",
-    "url": "git://github.com/hubot-scripts/hubot-mailchimp.git"
+    "url": "git://github.com/inakiabt/hubot-intercom.io.git"
   },
   "bugs": {
-    "url": "https://github.com/hubot-scripts/hubot-mailchimp/issues"
+    "url": "https://github.com/inakiabt/hubot-intercom.io/issues"
   },
   "dependencies": {
     "coffee-script": "~1.6",
-    "mailchimp": "1.1.0"
+    "q": "1.1.1",
+    "underscore": "1.7.0",
+    "intercom.io": "1.0.5"
   },
   "main": "index.coffee",
-  "readme": "hubot-mailchimp\n===============\n\nMailchimp hubot script as an NPM package\n",
+  "readme": "hubot-intercom.io\n===============\n\nIntercom.io hubot script as an NPM package\n",
   "readmeFilename": "README.md",
-  "homepage": "https://github.com/hubot-scripts/hubot-mailchimp"
+  "homepage": "https://github.com/inakiabt/hubot-intercom.io"
 }
